--- a/src/components/home/TestimonialSlider.module.css
+++ b/src/components/home/TestimonialSlider.module.css
@@ -5,6 +5,8 @@
 .sliderWrapper {
   max-width: 700px;
   margin: 0 auto;
+  overflow: hidden;
+  width: 100%;
 }
 
 .card {
